--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -1,5 +1,5 @@
 .btn_read{
- text-align: end;
+text-align: end;
  width: 100%;
  padding-top: 80px;
  padding-right: 10px;
@@ -9,11 +9,13 @@
  display: inline-flex;
  border: 2px solid silver;
  margin-bottom: 20px;
+ width: 100%;
 }
 
 .params_title{
   padding-left: 1em;
   font-size: 17px;
+  width: 100%;
 }
 
 .post_paragraph{
