--- a/src/components/LastPosts/LastPosts.astro
+++ b/src/components/LastPosts/LastPosts.astro
@@ -5,7 +5,7 @@ const params = Astro.props;
 ---
 
 <div class="last-news">
-  <div class="font-semibold text-xl text-blue-800 tracking-wider">Все новости</div>
+  <div class="Post_title"><a class="a_title" href="">Все новости</a></div>
   <div class="last-news__container">
     {
       params?.news?.map((item) => {
@@ -52,17 +52,20 @@ const params = Astro.props;
   }
 
   .last-news__card:nth-child(2) {
+    width: 40%;
+    height: 40%;
   }
 
   .last-news__card:nth-child(5) {
   }
 
   .last-news__card img {
-    width: 100%;
+    width: 60%;
+    height: 50%;
   }
 
   .last-news__card:first-child img {
-    width: 100%;
+    width: 120%;
     height: 100%;
     
   }
@@ -81,9 +84,11 @@ const params = Astro.props;
 
   .last-news__card-title {
     cursor: pointer;
+
   }
 
   .last-news__card-date {
+    font-size: 1em;
   }
 
   .last-news__card:first-child .last-news__card-content__container {
@@ -104,19 +109,37 @@ const params = Astro.props;
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 26%;
 
-    color: white;
+    background-color: red;
 
     padding: 30px;
   }
 
-  .last-news__card:first-child
-    .last-news__card-content__container
+    .last-news__card-content__container{
+      width: 70%;
+    }   
     .last-news__card-title {
+      color: black;
   }
 
-  .last-news__card:first-child
-    .last-news__card-content__container
+  .last-news__card:first-child{
+    padding-bottom: 1em;
+
+  }
+    .last-news__card-content__container{
+      color: black;
+    }
     .last-news__card-date {
+     
+  } 
+
+  .Post_title{
+    color: red;
+  }
+  .a_title{
+    color: blue;
+    font-weight: bold;
+    font-size: 1.5em;
   }
 </style>
