Shanchy_new_commit

--- a/src/components/LastPosts/LastPosts.astro
+++ b/src/components/LastPosts/LastPosts.astro
@@ -57,7 +57,10 @@ const params = Astro.props;
     height: 40%;
   }
 
-  .last-news__card:nth-child(5) {
+  .last-news__card {
+   width: 480px;
+   height: 500px;
+
   }
 
   .last-news__card img {
