--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -3,7 +3,8 @@ import { AiFillPhone, AiOutlineMail } from "react-icons/ai";
 ---
 
 <footer class="footer">
-      <a class="footer_a" href="/"> Администрация Чаа-Хольского кожууна</a>    
+  <div class="container">
+    <a class="footer_a" href="/"> Администрация Чаа-Хольского кожууна</a>    
       <a class="footer_oficcial" href="/">Официальный интернет-ресурс</a>
 
         
@@ -55,6 +56,8 @@ import { AiFillPhone, AiOutlineMail } from "react-icons/ai";
     <div class="footer_paragraph">
       <p class="document_paragraph">Все материалы сайта доступны по лицензии: Лицензия на пользование</p>
     </div>
+  </div>
+      
 </footer>
 
 
