--- a/src/components/LastPosts/LastPosts.astro
+++ b/src/components/LastPosts/LastPosts.astro
@@ -4,147 +4,162 @@ import FormattedDate from "../FormattedDate/FormattedDate";
 const params = Astro.props;
 ---
 
-<div class="last-news">
-  <div class="Post_title"><a class="a_title" href="">Все новости</a></div>
-  <div class="last-news__container">
-    {
-      params?.news?.map((item) => {
-        return (
-          <div class="last-news__card first:relative first:flex-[0_0_auto] w-1/3 first:w-2/3 h-full md:first:h-[400px] odd:px-2 even:px-2 mt-5">
-            <img
-              src={`${import.meta.env.PUBLIC_URL}${item.preview_image.url}`}
-              class="first:max-w-full first:max-h-[400px] max-w-[300px] max-h-[200px] h-[200px] object-cover"
-            />
-
-
-              <div class="last-news__card-content">
-                <h3 class="text-lg break-words">
-                  <a class="last-news__card-title" href={`/news/${item.id}`}>
-                    {item.title.length > 60
-                      ? String(item.title).substring(0, 60) + "..."
-                      : item.title}
-                  </a>
-                </h3>
-
-                <div class="last-news__card-date text-sm">
-                  <FormattedDate date={item.publishedAt} />
-                </div>
+<div class="wrap">
+  <div class="index-news-block">
+    <div class="top-block flex">
+      <div class="block-name">Новости</div>
+      <a href="#">Все новости</a>
+    </div>
+    <div class="flex">
+      {
+        params?.news?.map((item, index) => {
+          console.log(index)
+          if (index === 0) {
+            return <div
+              class="big-item"
+              style={{ backgroundImage: `url('https://api.mert.rtyva.ru/uploads/photo2_a5c23bae8b.jpg')` }}
+            >
+              <div class="text">
+                <a href="#">
+                  Совместный семинар-совещание Правительства и комиссии
+                  Госсовета по направлению «Строительство, жилищно-коммунальное
+                  хозяйство
+                </a>
+                <div class="date">19 августа 2021, 7:06</div>
               </div>
-            </div>
-          
-
-        );
-      })
-    }
+            </div>;
+            
+            
+          } else {
+            return (
+              <div class="item other">
+                <img src="https://api.mert.rtyva.ru/uploads/photo2_a5c23bae8b.jpg" />
+                <a href="#">
+                  Начался приём заявок на предоставление грантов на реализацию
+                  проектов в сфере образования
+                </a>
+                <div class="date">19 августа 2021, 7:06</div>
+              </div>
+            );
+          }
+        })
+      }
+    </div>
   </div>
 </div>
 
 <style>
-  .last-news {
-    position: static;
-    margin: 0 0 100px 0;
+  .wrap {
+    margin: 0 auto;
+    max-width: 1176px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    padding: 0 15px;
   }
 
-  .last-news__container {
-    width: 100%;
+  .flex {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
     justify-content: space-between;
   }
 
-  .last-news__card:nth-child(2) {
-    max-width: 500px;
-    max-height: 500px;
+  .index-news-block {
+    padding-bottom: 80px;
   }
-
-  .last-news__card {
-   width: 480px;
-   height: 500px;
+  .index-news-block.inner .big-item {
+    width: 100%;
+    height: auto;
+    padding-top: 48%;
   }
-
-  .last-news__card img {
-    width: 60%;
-    height: 50%;
+  .index-news-block.inner .item {
+    width: 48.5%;
   }
-
-  .last-news__card:first-child img {
-    width: 105%;
+  .index-news-block .top-block {
+    border-bottom: 1px solid #dee2e6;
+    padding-bottom: 2.5rem;
+    margin-bottom: 2.5rem;
   }
- 
-
-  .last-news__card-content {
-    
+  .index-news-block .top-block .block-name {
+    font-size: 1.875rem;
+    line-height: 1.2;
+    font-family: "Golos-UI Med";
   }
-
-  .last-news__card-title {
-    cursor: pointer;
+  .index-news-block .top-block a {
+    color: #0f61d9;
+    text-decoration: none;
+    margin-top: 10px;
   }
-
-  .last-news__card-date {
-    font-size: 1em;
+  .index-news-block .top-block a:hover {
+    text-decoration: underline;
   }
-
-  .last-news__card:first-child {
-    width: 740px;
-    height: 100%;
+  .index-news-block .big-item {
+    width: 66%;
+    margin-bottom: 40px;
+    position: relative;
   }
-  .last-news__card-content__container {
+  .index-news-block .big-item:after {
+    content: "";
     position: absolute;
-    top: 0;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(1, 1, 1, 0.3);
   }
-
-  .last-news__card:first-child{
-    color: brown;
+  .index-news-block .big-item .text {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #fff;
+    padding: 1.875rem 1.875rem;
+    z-index: 2;
   }
-    .last-news__card-content__container
-    {
-      display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    }
-    .last-news__card-content {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 60%;
-
-    padding: 10px;
+  .index-news-block .big-item .text a {
+    display: block;
+    text-decoration: none;
+    color: #fff;
+    margin-bottom: 1rem;
+    font-family: "Golos-UI Med";
+    font-size: 1.25rem;
   }
-
-    .last-news__card-content__container{
-      width: 70%;
-    }   
-    .last-news__card-title {
-      color: black;
-      font-weight: normal;
+  .index-news-block .big-item .text a:hover {
+    text-decoration: underline;
   }
-
-  .last-news__card:first-child{
-    padding-bottom: 1em;
-
+  .index-news-block .item {
+    width: 32%;
+    margin-bottom: 40px;
   }
-    .last-news__card-content__container{
-      color: black;
-    }
-    .last-news__card-date {
-     color: brown;
-  } 
-
-  .Post_title{
-    color: red;
+  .index-news-block .item.other {
+    padding-bottom: 60px;
   }
-  .a_title{
-    color: blue;
-    font-weight: bold;
-    font-size: 1.5em;
+  .index-news-block .item img {
+    width: 100%;
+    margin-bottom: 1.5rem;
   }
-
-  .
+  .index-news-block .item a {
+    display: block;
+    text-decoration: none;
+    font-family: "Golos-UI Med";
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .index-news-block .item a:hover {
+    text-decoration: underline;
+  }
+  .index-news-block .item .date {
+    color: #50555a;
+  }
 </style>
