--- a/src/layouts/StandartLayout.astro
+++ b/src/layouts/StandartLayout.astro
@@ -2,7 +2,7 @@
 import Header from "../components/Header/Header.astro";
 import Footer from "../components/Footer/Footer.astro";
 import '../styles/globals.css'
-import '../styles/post.css'
+import '../styles/post.scss'
 
 const { title } = Astro.props;
 ---
@@ -14,6 +14,8 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/tuvan_herb.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <link rel="stylesheet" href="slick.css" />
+    <script src="slick.min.js" is:inline></script>
   </head>
   <body>
     <Header />
