--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Carousel from "../components/Carousel/Carousel.astro";
 import LastPosts from "../components/LastPosts/LastPosts.astro";
 import PinnedLinks from "../components/PinnedLinks/PinnedLinks.astro";
 import DemoCarousel from "../components/Carousel/Carousel";
+import RelatedPost from "../components/Posts/RelatedPost.astro";
 
 const res = await fetch(
   `${
@@ -30,7 +31,7 @@ const res = await fetch(
         <Carousel />
         <!-- <Carousel content={res.slider} /> -->
         <div class="">
-           <!-- <LastPosts news={news} />  -->
+           <LastPosts news={news} /> 
         </div>
       </div>
       <!-- <PinnedLinks content={res.pinned_links} /> -->
