--- a/src/pages/news/[post]-[id].astro
+++ b/src/pages/news/[post]-[id].astro
@@ -19,7 +19,7 @@ const post = await fetch(
       id={post.id}
       title={post.title}
       preview_image={post.preview_image}
-      images={post.images}
+      images={post.image}
       body={post.content}
       
     />
