Shanchy_new_commit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ const res = await fetch(
   <MainPageLayout>
     <div class="">
       <div class="">
-        <Carousel />
+        <Carousel />s
         <!-- <Carousel content={res.slider} /> -->
         <div class="">
            <LastPosts news={news} /> 
