Shanchy_new_commit

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -29,7 +29,7 @@ import HeaderSearchField from "./HeaderSearchField";
 
   <HeaderNavbar />
   <script src="https://lidrekon.ru/slep/js/jquery.js" is:inline></script>
-  <script src="/js/bvi.js" is:inline></script>
+  <script src="bvi.js" is:inline></script>
 </header>
 
 
