--- a/src/components/LastPosts/LastPosts.astro
+++ b/src/components/LastPosts/LastPosts.astro
@@ -1,6 +1,5 @@
 ---
 import FormattedDate from "../FormattedDate/FormattedDate";
-
 const params = Astro.props;
 ---
 
@@ -8,37 +7,53 @@ const params = Astro.props;
   <div class="index-news-block">
     <div class="top-block flex">
       <div class="block-name">Новости</div>
-      <a href="#">Все новости</a>
+      <a href="news">Все новости</a>
     </div>
     <div class="flex">
       {
-        params?.news?.map((item, index) => {
-          console.log(index)
+        params.news.map((item, index) => {
+          console.log(index);
           if (index === 0) {
-            return <div
-              class="big-item"
-              style={{ backgroundImage: `url('https://api.mert.rtyva.ru/uploads/photo2_a5c23bae8b.jpg')` }}
-            >
-              <div class="text">
-                <a href="#">
-                  Совместный семинар-совещание Правительства и комиссии
-                  Госсовета по направлению «Строительство, жилищно-коммунальное
-                  хозяйство
-                </a>
-                <div class="date">19 августа 2021, 7:06</div>
+            return (
+              <div
+                class="big-item"
+                style={{
+                  backgroundImage: `url('${import.meta.env.PUBLIC_URL}${
+                    item.preview_image.url
+                  }')`,
+                }}
+              >
+                <div class="text">
+                  <a href="#">
+                    <div set:html={item.title}></div>
+                  </a>
+                  <div class="date">19 августа 2021, 7:06</div>
+                </div>
               </div>
-            </div>;
-            
-            
+            );
           } else {
+            let string = item.title;
+            if (string.length > 60) {
+              string = string.substring(0, 60) + "...";
+            }
+
+            const date = new Date(item.publishedAt);
+            const timestamp = date.valueOf();
+            const formattedDate = new Intl.DateTimeFormat("ru-RU", {
+              month: "long",
+              day: "numeric",
+              hour: "numeric",
+              minute: "numeric",
+            }).format(timestamp);
+
             return (
               <div class="item other">
-                <img src="https://api.mert.rtyva.ru/uploads/photo2_a5c23bae8b.jpg" />
-                <a href="#">
-                  Начался приём заявок на предоставление грантов на реализацию
-                  проектов в сфере образования
-                </a>
-                <div class="date">19 августа 2021, 7:06</div>
+                <img
+                  src={`${import.meta.env.PUBLIC_URL}${item.preview_image.url}`}
+                  style=""
+                />
+                <div>{string}</div>
+                <div class="date">{formattedDate}</div>
               </div>
             );
           }
@@ -142,6 +157,11 @@ const params = Astro.props;
     width: 32%;
     margin-bottom: 40px;
   }
+
+  .index-news-block .item img {
+    height: 250px;
+  }
+
   .index-news-block .item.other {
     padding-bottom: 60px;
   }
