--- a/src/components/Posts/PostPage.astro
+++ b/src/components/Posts/PostPage.astro
@@ -1,11 +1,10 @@
 ---
 import Carousel from "../Carousel/Carousel.astro";
-
 const params = Astro.props;
 ---
 
 <div class="">
-  <div class="">{params.title}</div>
+  <div class="title">{params.title}</div>
   {
     //тернарный оператор если в новости одно изображение, то показывается изображение, а не слайдер
     params?.images?.length < 1 ? (
@@ -15,21 +14,15 @@ const params = Astro.props;
           src={`${import.meta.env.PUBLIC_URL}` + params.preview_image.url}
           class="object-cover"
         />
+        
       </div>
     ) : (
       <section>
-        <div
-          id="indicators-carousel"
-          class=""
-          data-carousel="static"
-        >
+        <div id="indicators-carousel" class="" data-carousel="static">
           <div class="">
             {params?.images?.map((item) => {
               return (
-                <div
-                  class=""
-                  data-carousel-item="active"
-                >
+                <div class="" data-carousel-item="active">
                   <img
                     src={import.meta.env.PUBLIC_URL + item.url}
                     class="img_post"
@@ -52,27 +45,39 @@ const params = Astro.props;
               );
             })}
           </div>
-        
         </div>
       </section>
     )
   }
   <div class="" set:html={params.body} />
 
-  <div>
-    <button class="button dark:bg-gray-500">Назад к новостям</button>
+  <div class="btn__news">
+    <button class="button dark:bg-gray-500">
+      <a class="btn" href="post">Назад к новостям</a>
+    </button>
   </div>
 </div>
 
-
 <style>
-.img_post{
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-  height: 50%;  
-  margin-top: 10px;
-}
-
-
+  .img_post {
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    height: 40%;
+    margin-top: 10px;
+  }
+  .title {
+    font-size: 25px;
+    font-weight: bold;
+    width: 100%;
+    padding-top: 2em;
+    padding-bottom: 2em;
+  }
+  .btn__news {
+    padding-top: 1em;
+    padding-bottom: 1em;
+  }
+  .btn {
+    font-size: 10px;
+  }
 </style>
