--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -1,15 +1,14 @@
 .post__card {
   display: inline-flex;
   border: 2px solid silver;
-  margin-bottom: 20px;
   width: 100%;
 
   .content {
     width: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0 1rem;
     .header {
-      text-align: center;
       flex: 1;
       .heading {
         font-size: 20px;
@@ -17,16 +16,31 @@
         font-weight: normal;
       }
     }
+    .date {
+      display: flex;
+      flex-direction: row;
+      gap: 5px;
+      width: 100%;
+
+      .date__title {
+        display: flex;
+      }
+      .unix {
+        font-weight: normal;
+      }
+    }
 
     .body {
-      flex: 1;
+      flex: 4;
     }
 
     .footer {
       flex: 1;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
       font-weight: bold;
-      padding-left: 2em;
-      padding-right: 2em;
 
       .btn {
         text-align: end;
