Shanchy_new_commit

--- a/src/layouts/StandartLayout.astro
+++ b/src/layouts/StandartLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Header from "../components/Header/Header.astro";
 import Footer from "../components/Footer/Footer.astro";
-import '../styles/globals.css'
+import '../styles/globals.scss'
 import '../styles/post.scss'
 
 const { title } = Astro.props;
