--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -46,7 +46,8 @@ footer {
   background: var(--blue);
   color: var(--white);
   font-weight: 400;
-  padding: 1rem;
+  padding: 0 20px;
+  
 }
 .footer {
   margin-top: auto;
@@ -123,8 +124,32 @@ img {
 
   .sidebar__menu {
     display: none !important;
+    
   }
 }
+@media (max-width: 480px){
+ 
+  .mobile-navbar{
+    display: flex!important;
+    flex-direction: column;
+    padding: 0 20px;
+    
+  }
+  .carousel{
+    
+  }
+  .mobile-navbar__show{
+    max-width: 300px;
+  }
+ 
+}
+@media (max-width: 480px){
+  .footer{
+  padding: 20px 20px;
+ }
+
+}
+
 
 /* sidebar */
 /* !!!need mobile version */
@@ -169,3 +194,37 @@ img {
   font-size: var(--text-2xl);
   padding: 15px 0;
 }
+
+.slick-arrow {
+  width: 100px;
+  color: white;
+}
+
+.slick-next {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: .5;
+  background: black;
+  font-size: 30px;
+  content: ">";
+}
+
+.slick-prev {
+  display: none;
+  visibility: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  opacity: .5;
+  background: black;
+  font-size: 30px;
+  z-index: 4;
+}
+
+.slick-list{
+  
+}
+
