--- a/src/components/Carousel/styles.css
+++ b/src/components/Carousel/styles.css
@@ -1,12 +1,22 @@
+/* @media (max-width: 767px) {
+  .item {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+
 .index-page-slider {
-  margin-bottom: 90px;
+  width: 100%;
 }
 .index-page-slider .item {
   background: #f4f7fb;
-  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /* position: relative; 
 }
 .index-page-slider .item .image {
-  position: absolute;
+  /* position: absolute; 
   right: 0;
   top: 0;
   width: 48%;
@@ -77,8 +87,8 @@
 }
 .index-page-slider .slick-dots li.slick-active button {
   background: #000;
-}
-.index-page-slider .slick-dots li button {
+} */
+/* .index-page-slider .slick-dots li button {
   padding: 0;
   font-size: 0;
   background: none;
@@ -88,4 +98,49 @@
   border-radius: 50%;
   width: 12px;
   height: 12px;
+} */
+
+@media (max-width: 767px) {
+  .slick-slide div .item {
+    grid-template:
+      "image"
+      "text" !important;
+    grid-template-rows: 1fr 0.5fr !important;
+  }
+}
+
+.slick-slide div .item {
+  display: grid !important;
+  grid-template: "text image";
+  grid-template-columns: 1fr 1fr;
+}
+
+.slick-slide div .item .image {
+  background-repeat: no-repeat;
+  background-size: cover;
+  grid-area: image;
+}
+
+.slick-slide div .item .text {
+  background: "#f4f4f4";
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  justify-content: center;
+  align-items: center;
+  grid-area: text;
+  height: 100%;
+  min-height: 100%;
+  padding: 0 60px;
+  color: "#443D3D";
+  font-size: "20px";
+  font-family: "Roboto";
+  text-align: "start";
+  word-break: "keep-all";
+  word-wrap: "normal";
+}
+
+.slick-slide div .item .text p {
+  word-wrap: normal;
+  word-break: keep-all;
 }
