--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
 import MainPageLayout from "../layouts/MainPageLayout.astro";
 import StandartLayout from "../layouts/StandartLayout.astro";
-import Carousel from "../components/Carousel/Carousel.astro";
 import LastPosts from "../components/LastPosts/LastPosts.astro";
 import PinnedLinks from "../components/PinnedLinks/PinnedLinks.astro";
 import DemoCarousel from "../components/Carousel/Carousel";
 import RelatedPost from "../components/Posts/RelatedPost.astro";
+import MainpageSlider from "../components/Carousel/Carousel";
 
 const res = await fetch(
   `${
@@ -27,10 +27,9 @@ const res = await fetch(
 <StandartLayout title="Администрация Чаа-Хольского кожууна">
   <MainPageLayout>
     <div class="">
-      <div class="">
-        <Carousel slider={res.slider} client:load/>
-        <!-- <Carousel content={res.slider} /> -->
-        <div class="">
+      <div class="carousel">
+        <MainpageSlider slider={res.slider} client:load />
+        <div class="post__card__news">
            <LastPosts news={news} /> 
         </div>
       </div>
