--- a/src/layouts/StandartLayout.astro
+++ b/src/layouts/StandartLayout.astro
@@ -1,8 +1,8 @@
 ---
 import Header from "../components/Header/Header.astro";
 import Footer from "../components/Footer/Footer.astro";
-import '../styles/globals.scss'
-import '../styles/post.scss'
+import "../styles/globals.scss";
+import "../styles/post.scss";
 
 const { title } = Astro.props;
 ---
@@ -18,9 +18,7 @@ const { title } = Astro.props;
   </head>
   <body>
     <Header />
-    <div class="text-md">
-      <slot />
-    </div>
+    <slot />
     <Footer />
   </body>
 </html>
