--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import MainPageLayout from "../layouts/MainPageLayout.astro";
 import StandartLayout from "../layouts/StandartLayout.astro";
-import LastPosts from "../components/LastPosts/LastPosts.astro";
+import LastPosts from "../components/LastPosts/LastPosts";
 import PinnedLinks from "../components/PinnedLinks/PinnedLinks.astro";
 import DemoCarousel from "../components/Carousel/Carousel";
 import RelatedPost from "../components/Posts/RelatedPost.astro";
@@ -30,7 +30,7 @@ const res = await fetch(
       <div class="carousel">
         <MainpageSlider slider={res.slider} client:load />
         <div class="post__card__news">
-           <LastPosts news={news} /> 
+           <LastPosts news={news} client:load/> 
         </div>
       </div>
       <!-- <PinnedLinks content={res.pinned_links} /> -->
