--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -11,14 +11,14 @@
     .header {
       flex: 1;
       .heading {
-        font-size: 20px;
+        font-size: calc(1.2em + 1px);
         width: 100%;
         font-weight: normal;
       }
     }
     .date {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       gap: 5px;
       width: 100%;
 
@@ -31,7 +31,7 @@
     }
 
     .body {
-      flex: 4;
+      flex: 1;
     }
 
     .footer {
@@ -55,8 +55,177 @@
   background: blue;
 }
 
-@media (max-width: 450px){
-  .post__card__news{
-    width: 700px;
+@media (max-width: 768px) {
+  .post__card {
+    
   }
+  .post__card .content {
+    padding: 0;
+    margin:  0;
+  }
+ 
+ .container__news__index{
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  margin: 20px 0px;
+ }
+  .post__card .content .header {
+    background: var(--blue);
+    color: var(--white);
+    padding: 30px;
+    margin: 0;
+  }
+
+  .post__card .content .body {
+    padding: 25px !important;
+  }
+
+  .post__card .content .footer {
+    background: var(--blue);
+    color: var(--white);
+    padding: 30px;
+    margin: 0;
+
+  }
+
+  .post__card .post__card__image-container {
+  }
+
+  .post__card .post__card__image-img {
+  }
+
+  .post__card__img {
+    display: none;
+  }
+.post__card .btn .button{
+  background: var(--white);
+  color: black;
+}
+  .heading {
+    font-weight: 700 !important;
+    padding: 10 0px !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .index-news-block .big-item {
+    width: 100%;
+  }
+}
+
+.wrap {
+  margin: 0 auto;
+  max-width: 1176px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0 15px;
+}
+
+.flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+
+.index-news-block {
+  padding-bottom: 80px;
+}
+.index-news-block.inner .big-item {
+  width: 100%;
+  height: auto;
+  padding-top: 48%;
+}
+.index-news-block.inner .item {
+  width: 48.5%;
+}
+.index-news-block .top-block {
+  border-bottom: 1px solid #dee2e6;
+  padding-bottom: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+.index-news-block .top-block .block-name {
+  font-size: 1.875rem;
+  line-height: 1.2;
+  font-family: "Golos-UI Med";
+}
+.index-news-block .top-block a {
+  color: #0f61d9;
+  text-decoration: none;
+  margin-top: 10px;
+}
+.index-news-block .top-block a:hover {
+  text-decoration: underline;
+}
+.index-news-block .big-item {
+  width: 66%;
+  margin-bottom: 40px;
+  position: relative;
+  background-repeat: no-repeat;
+}
+
+.index-news-block .big-item .text {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #fff;
+  padding: 1.875rem 1.875rem;
+  z-index: 2;
+}
+.index-news-block .big-item .text a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  margin-bottom: 1rem;
+  font-family: "Golos-UI Med";
+  font-size: 1.25rem;
+}
+.index-news-block .big-item .text a:hover {
+  text-decoration: underline;
+}
+.index-news-block .item {
+  width: 32%;
+  margin-bottom: 40px;
+}
+
+.index-news-block .item img {
+  height: 350px;
+  background-repeat: no-repeat;
+  
+}
+
+.index-news-block .item.other {
+  padding-bottom: 60px;
+}
+.index-news-block .item img {
+  width: 100%;
+  height: 75%;
+  background-repeat: no-repeat;
+  
+}
+.index-news-block .item a {
+  display: block;
+  text-decoration: none;
+  font-family: "Golos-UI Med";
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+.index-news-block .item a:hover {
+  text-decoration: underline;
+}
+.index-news-block .item .date {
+  color: #50555a;
 }
