--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -171,6 +171,8 @@
   margin-bottom: 40px;
   position: relative;
   background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
 .index-news-block .big-item .text {
