Shanchy_new_commit

--- a/src/components/LastPosts/LastPosts.astro
+++ b/src/components/LastPosts/LastPosts.astro
@@ -24,6 +24,7 @@ const params = Astro.props;
                 }}
               >
                 <div class="text">
+                  <div class="text__bg"><img src="/public/favicon.svg" /></div>
                   <a href="#">
                     <div set:html={item.title}></div>
                   </a>
