--- a/src/components/PageName/PageName.astro
+++ b/src/components/PageName/PageName.astro
@@ -4,3 +4,12 @@ const { title } = Astro.props
   <div class="container page__name">
     {title}
   </div>
+
+  <style>
+    @media (max-width: 767px) {
+      .container .page__name{
+   display: none;
+   background: red;
+  }
+    }
+  </style>
