--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,6 +8,7 @@
   .header__service {
     width: 100% !important;
     display: flex;
+    
   }
 
   .header__service__bvi {
@@ -16,6 +17,7 @@
 
   .header__service__search {
     flex: 1 !important;
+
     
   }
 
@@ -25,6 +27,9 @@
 
   .header__navbar {
     display: none !important;
+  }
+  .header__brand{
+    
   }
 }
 
@@ -36,6 +41,7 @@
   align-items: center;
   padding: 12px 0;
   overflow: hidden;
+  
 }
 
 .header__brand {
