--- a/src/layouts/MainPageLayout.astro
+++ b/src/layouts/MainPageLayout.astro
@@ -12,7 +12,7 @@ const mobile = [
 ---
 
 <div class="bg-blue-900">
-  <div class="container mx-auto">
+  <div class="container mx-auto ">
     <MobileMenu client:load>
       {
         mobile.map((item) => (
@@ -26,3 +26,7 @@ const mobile = [
 <div class="container mx-auto text-black font-light min-h-[800px] py-3">
   <slot />
 </div>
+
+<style>
+
+</style>
