--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -73,19 +73,19 @@
   .post__card .content .header {
     background: var(--blue);
     color: var(--white);
-    padding: 30px;
-    margin: 0;
+    padding: 10px 30px;
+
   }
 
   .post__card .content .body {
-    padding: 25px !important;
+    padding: 30px !important;
   }
 
   .post__card .content .footer {
     background: var(--blue);
     color: var(--white);
-    padding: 30px;
-    margin: 0;
+    padding: 0px 10px;
+
 
   }
 
