--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -3,7 +3,8 @@ import HeaderNavbar from "./HeaderNavbar";
 import { FaRegEye } from "react-icons/fa/index.js";
 import HeaderSearchField from "./HeaderSearchField";
 ---
-
+<script src="https://lidrekon.ru/slep/js/jquery.js" is:inline></script>
+<script src="https://lidrekon.ru/slep/js/uhpv-full.min.js" is:inline></script>
 <header>
   <div class="container header">
     <div class="header__brand">
