--- a/src/styles/person.scss
+++ b/src/styles/person.scss
@@ -1,23 +1,17 @@
 @media (max-width: 767px){
   .rounded-full{
-  display: block;
-  inset: 0px;
-  box-sizing: border-box;
-  padding: 0px;
-  border: none;
-  margin: auto;
-  display: block;
-  width: 0px;
-  height: 0px;
-  min-width: 100%;
-  max-width: 100%;
-  min-height: 100%;
-  max-height: 100%;
-  object-fit: cover;
+    position: relative;
+    inset: 0px;
+    box-sizing: border-box;
+    padding: 0px;
+    border: none;
+    margin: auto;
+    display: block;
+    max-width: 80% !important;
+    object-fit: cover;
   }
 .person__block{
-  display: flex;
-  flex-direction: column;
+
 
 }
   .image{
@@ -25,23 +19,27 @@
   }
   .date__information{
   
-
- 
   }
   .date{
-    display: inline;
+  
   }
   .date__card{
-    display: inline;
+
   }
 .position{
  display: flex;
  flex-direction: column;
 
+
 }
 .card{
   display: flex;
   flex-direction: column;
+}
+.text__footer{
+}
+.card__footer{
+  text-align: center !important;
 }
 }
 
@@ -53,23 +51,26 @@
 .position {
   background-color: #fff;
   display: flex;
-  flex-direction: row;
+
+
 }
 .date{
   padding: 10px 20px;
+  text-align: left;
 }
 .date__card {
-  padding: 20px 20px;
+  padding: 30px 20px;
 }
 .date__information {
- padding: 20px 20px;
+ padding: 30px 20px;
+ text-align: center;
 }
 
 
 .rounded-full {
   max-width: 180px;
   min-width: 180px;
-  height: 180px;
+  height: 100%;
   border-radius: 100%;
   padding-top: 1em;
   padding-bottom: 1em;
@@ -79,6 +80,7 @@
 }
 .text__footer {
   color: black;
+  
 }
 
 .card__footer {
