--- a/src/layouts/MainPageLayout.astro
+++ b/src/layouts/MainPageLayout.astro
@@ -23,7 +23,7 @@ const mobile = [
   </div>
 </div>
 
-<div class="container mx-auto text-black font-light min-h-[800px] py-3">
+<div class="container">
   <slot />
 </div>
 
