--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,25 +15,24 @@ const res = await fetch(
   .then((res) => res.json())
   .then((res) => res.data);
 
- const news = await fetch(
-   `${
-     import.meta.env.PUBLIC_URL
-   }/api/posts?pagination[page]=1&pagination[pageSize]=5&sort=createdAt:desc&populate=*`
- )
-   .then((res) => res.json())
-   .then((res) => res.data);
+const news = await fetch(
+  `${
+    import.meta.env.PUBLIC_URL
+  }/api/posts?pagination[page]=1&pagination[pageSize]=5&sort=createdAt:desc&populate=*`
+)
+  .then((res) => res.json())
+  .then((res) => res.data);
 ---
 
 <StandartLayout title="Администрация Чаа-Хольского кожууна">
   <MainPageLayout>
-    <div class="">
-      <div class="carousel">
-        <MainpageSlider slider={res.slider} client:load />
-        <div class="post__card__news">
-           <LastPosts news={news} client:load/> 
-        </div>
-      </div>
-      <!-- <PinnedLinks content={res.pinned_links} /> -->
+    <div style="width: 100%; padding: 0 20px;">
+      <MainpageSlider slider={res.slider} client:load />
+    <div class="post__card__news">
+      <LastPosts news={news} client:load />
     </div>
+    </div>
+    
+    <!-- <PinnedLinks content={res.pinned_links} /> -->
   </MainPageLayout>
 </StandartLayout>
