--- a/src/styles/post.scss
+++ b/src/styles/post.scss
@@ -59,6 +59,10 @@
   .post__card {
     
   }
+  .post__card__main{
+    width: 100% !important;
+    padding: 0 20px;
+  }
   .post__card .content {
     padding: 0;
     margin:  0;
