--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,12 +5,14 @@
 @import "ini.scss";
 @import "header.scss";
 @import "documents.scss";
-@import "layouts.css";
+@import "layouts.scss";
 @import "mobile_navbar.css";
 @import "about.scss";
 @import "appeals.scss";
 @import "contacts.scss";
 @import "person.scss";
+@import "post.scss";
+
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
@@ -169,7 +171,6 @@ img {
   .page__name{
    display: none;
   }
- 
 }
 @media (max-width: 480px){
   .footer{
